fixed last about section not showing correctly

--- a/src/styling/about.css
+++ b/src/styling/about.css
@@ -20,7 +20,7 @@
 
 #aboutContainer {
   background-image: linear-gradient(white 0%, transparent 4%);
-  padding-bottom: 40vh;
+  padding-bottom: 60vh;
   animation: backgroundFade 2s;
 }
 
